context.

* Session root directories may be specified multiple times: each
accessible ROOT file is processed only once. This facilitates
specification of $ISABELLE_HOME_USER/ROOTS or command-line options like
-d or -D for "isabelle build" and "isabelle jedit". Example:

  isabelle build -D '~~/src/ZF'


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Completion supports theory header imports.


*** HOL ***

* SMT module:
  - The 'smt_oracle' option is now necessary when using the 'smt' method
    with a solver other than Z3. INCOMPATIBILITY.
  - The encoding to first-order logic is now more complete in the
    presence of higher-order quantifiers. An 'smt_explicit_application'
    option has been added to control this. INCOMPATIBILITY.

* Theory HOL-Computational_Algebra.Polynomial_Factorial does not provide
instances of rat, real, complex as factorial rings etc. Import
HOL-Computational_Algebra.Field_as_Ring explicitly in case of need.
INCOMPATIBILITY.

* Fact mod_mult_self4 (on nat) renamed to mod_mult_self3', to avoid
clash with fact mod_mult_self4 (on more generic semirings).
INCOMPATIBILITY.

* Facts sum.commute(_restrict) and prod.commute(_restrict) renamed to
sum.swap(_restrict) and prod.swap(_restrict), to avoid name clashes on
interpretation of abstract locales. INCOMPATIBILITY.

* Predicate pairwise_coprime abolished, use "pairwise coprime" instead.
INCOMPATIBILITY.

* Session HOL-Analysis: Moebius functions and the Riemann mapping
theorem.

* Class linordered_semiring_1 covers zero_less_one also, ruling out
pathologic instances. Minor INCOMPATIBILITY.

* Removed nat-int transfer machinery.  Rare INCOMPATIBILITY.


*** System ***

* Session ROOT entry: empty 'document_files' means there is no document
for this session. There is no need to specify options [document = false]
anymore.

* Linux and Windows/Cygwin is for x86_64 only. Old 32bit platform
support has been discontinued.

* Java runtime is for x86_64 only. Corresponding Isabelle settings have